--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,10 @@ data/state/
 data/synthesis/
 data/topics/
 data/mist.db
-data/config/user.md
-data/config/persona.md
-data/config/model.conf
-data/config/deep_model.conf
-data/config/avatar.png
-data/config/settings.json
+# data/config/user.md
+# data/config/persona.md
+# data/config/model.conf
+# data/config/deep_model.conf
+# data/config/avatar.png
+# data/config/settings.json
 
