--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,9 @@
     "tauri": "tauri"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.10.0",
     "typescript": "^5.6.0",
-    "vite": "^6.0.0",
-    "@tauri-apps/cli": "^2.0.0"
+    "vite": "^6.0.0"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0"
